--- a/client/styles/Home.module.css
+++ b/client/styles/Home.module.css
@@ -29,7 +29,7 @@
 }
 
 .title a {
-  color: #805AD5;
+  color: #805ad5;
   text-decoration: none;
 }
 
@@ -61,8 +61,15 @@
   border-radius: 5px;
   padding: 0.75rem;
   font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
+  font-family:
+    Menlo,
+    Monaco,
+    Lucida Console,
+    Liberation Mono,
+    DejaVu Sans Mono,
+    Bitstream Vera Sans Mono,
+    Courier New,
+    monospace;
 }
 
 .grid {
@@ -81,15 +88,17 @@
   text-decoration: none;
   border: 1px solid #eaeaea;
   border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
+  transition:
+    color 0.15s ease,
+    border-color 0.15s ease;
   max-width: 300px;
 }
 
 .card:hover,
 .card:focus,
 .card:active {
-  color: #805AD5;
-  border-color: #805AD5;
+  color: #805ad5;
+  border-color: #805ad5;
 }
 
 .card h2 {
